refactoring + fix erreur int/double